--- a/config/supply-chain/01-custom-server-template.yaml
+++ b/config/supply-chain/01-custom-server-template.yaml
@@ -12,7 +12,7 @@ spec:
           name: http
           port: 8080
       name: ports
-    - default: "notprovided.aramco.co"
+    - default: "notprovided.mydomain.co"
       name: "fqdn"
   ytt: |
     #@ load("@ytt:data", "data")
