--- a/config/ops/azure/02-sysops-azure-secret.yaml
+++ b/config/ops/azure/02-sysops-azure-secret.yaml
@@ -30,7 +30,7 @@ rules:
       - list
       - watch
     resourceNames:
-      - simple-mongodb-app-db
+      - micropets-db
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -49,7 +49,7 @@ subjects:
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretTemplate
 metadata:
-  name: mongodb-credentials-azure-exposed
+  name: micropets-mongodb-azure-credentials
   namespace: mongodb-instances-fr
 spec:
   serviceAccountName: mongo-sa-reader
@@ -58,7 +58,7 @@ spec:
       ref:
         apiVersion: documentdb.azure.com/v1beta20210515
         kind: MongodbDatabase
-        name: simple-mongodb-app-db
+        name: micropets-db
     - name: creds
       ref:
         apiVersion: v1
