--- a/config/ops/azure/03-appops-exposes-resource-bindings.yaml
+++ b/config/ops/azure/03-appops-exposes-resource-bindings.yaml
@@ -27,6 +27,14 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - resourceclaims
+    verbs:
+      - get
+      - list
+      - watch
 ---
 apiVersion: services.apps.tanzu.vmware.com/v1alpha1
 kind: ResourceClaimPolicy
