--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -3,7 +3,7 @@ kind: Workload
 metadata:
   name: elephants
   annotations:
-    serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database":{"namespace":"mongodb"}}}}'
+    serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database-not-used":{"namespace":"mongodb"}}}}'
   labels:
     apps.tanzu.vmware.com/workload-type-x: custom-server
     apps.tanzu.vmware.com/workload-type: web
