--- a/config/appconfiguration.yaml
+++ b/config/appconfiguration.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secured-autfw-ui-config
+  name: elephants-configuration
+  labels:
+    app.kubernetes.io/part-of: elephants
 stringData:
   # property-like keys; each key maps to a simple value
   type: app-configuration
