--- a/config/ops/k8s/02-sysops-k8s-secret.yaml
+++ b/config/ops/k8s/02-sysops-k8s-secret.yaml
@@ -3,11 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: mongo-sa-reader
+  namespace: mongodb
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: k8s-mongodb-role-reading
+  namespace: mongodb
 rules:
   - apiGroups:
       - ""
@@ -30,6 +32,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: k8s-mongodb-reader-to-read
+  namespace: mongodb
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -42,7 +45,8 @@ subjects:
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretTemplate
 metadata:
-  name: todo-mongodb-credentials-exposed
+  name: elephants-mongodb-credentials
+  namespace: mongodb
 spec:
   serviceAccountName: mongo-sa-reader
   inputResources:    
@@ -50,7 +54,7 @@ spec:
       ref:
         apiVersion: v1
         kind: Secret
-        name: todo-mongodb-admin-my-user
+        name: elephants-mongodb-admin-my-user
   template:
     metadata:
       labels:
