manage mongodb on k8s and Azure

--- a/config/ops/azure/02-sysops-azure-secret.yaml
+++ b/config/ops/azure/02-sysops-azure-secret.yaml
@@ -74,5 +74,6 @@ spec:
       port: "10255"
       host: $(.db.spec.owner.name).mongo.cosmos.azure.com
       username: $(.db.spec.owner.name)
+      options: /?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@$(.db.spec.owner.name)@
     data:
       password: $(.creds.data.primarymasterkey)
