--- a/config/ops/k8s/02-sysops-k8s-secret.yaml
+++ b/config/ops/k8s/02-sysops-k8s-secret.yaml
@@ -45,7 +45,7 @@ subjects:
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretTemplate
 metadata:
-  name: elephants-mongodb-credentials
+  name: micropets-mongodb-k8s-credentials
   namespace: mongodb
 spec:
   serviceAccountName: mongo-sa-reader
@@ -63,7 +63,10 @@ spec:
     stringData:
       type: mongodb
       port: "10255"
+      options: /admin?replicaSet=elephants-mongodb&ssl=false
+      host: elephants-mongodb-svc.mongodb.svc.cluster.local
     data:
       username: $(.creds.data.username)
       connectionString: $(.creds.data.connectionString\.standardSrv)
       password: $(.creds.data.password)
+      
