--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -7,7 +7,8 @@ metadata:
   labels:
     apps.tanzu.vmware.com/workload-type-x: custom-server
     apps.tanzu.vmware.com/workload-type: web
-    app.kubernetes.io/part-of: elephants
+    app.kubernetes.io/name: elephants
+    app.kubernetes.io/part-of: micropets-app
     micropets/kind: backend
 spec:
   serviceAccount: tap-default
