--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -11,7 +11,7 @@ metadata:
     app.kubernetes.io/part-of: micropets-app
     micropets/kind: backend
 spec:
-  serviceAccount: tap-default
+  serviceAccountName: tap-default
   source:
     git:
       url: https://github.com/bmoussaud/micropets-elephants
