--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -35,4 +35,4 @@ spec:
       value: www.dev-tap.tap3.eu.aks.mytanzu.xyz
     - name: testing_pipeline_matching_labels
       value:
-        apps.tanzu.vmware.com/pipeline: micropets-skip-test
+        apps.tanzu.vmware.com/pipeline: skip-test
