elephants in micropets-dev

--- a/config/ops/k8s/03-appops-exposes-resource-bindings.yaml
+++ b/config/ops/k8s/03-appops-exposes-resource-bindings.yaml
@@ -31,7 +31,7 @@ rules:
 apiVersion: services.apps.tanzu.vmware.com/v1alpha1
 kind: ResourceClaimPolicy
 metadata:
-  name: developers-in-any-namespaces-can-claim-local-mongodb
+  name: developers-in-micropets-namespaces-can-claim-local-mongodb
   namespace: mongodb
 spec:
   subject:
@@ -41,4 +41,5 @@ spec:
       matchLabels:
         services.apps.tanzu.vmware.com/class: k8s-mongodb
   consumingNamespaces:
-    - "*"
+    - micropets-dev
+    - micropets-int
