--- a/config/ops/k8s/02-sysops-k8s-secret.yaml
+++ b/config/ops/k8s/02-sysops-k8s-secret.yaml
@@ -69,4 +69,32 @@ spec:
       username: $(.creds.data.username)
       connectionString: $(.creds.data.connectionString\.standardSrv)
       password: $(.creds.data.password)
+---
+apiVersion: secretgen.carvel.dev/v1alpha1
+kind: SecretTemplate
+metadata:
+  name: micropets-int-mongodb-k8s-credentials
+  namespace: mongodb
+spec:
+  serviceAccountName: mongo-sa-reader
+  inputResources:    
+    - name: creds
+      ref:
+        apiVersion: v1
+        kind: Secret
+        name: elephants-mongodb-admin-my-user
+  template:
+    metadata:
+      labels:
+        services.apps.tanzu.vmware.com/class: k8s-mongodb
+    type: Opaque
+    stringData:
+      type: mongodb
+      port: "10255"
+      options: /admin?replicaSet=elephants-mongodb&ssl=false
+      host: elephants-mongodb-svc.mongodb.svc.cluster.local
+    data:
+      username: $(.creds.data.username)
+      connectionString: $(.creds.data.connectionString\.standardSrv)
+      password: $(.creds.data.password)
       
