--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -36,3 +36,7 @@ spec:
     - name: testing_pipeline_matching_labels
       value:
         apps.tanzu.vmware.com/pipeline: skip-test
+    - name: scanning_source_policy
+      value: nodejs-mongodb-policy
+    - name: scanning_image_policy
+      value: nodejs-mongodb-policy
