--- a/catalog-component.yaml
+++ b/catalog-component.yaml
@@ -15,3 +15,15 @@ spec:
   lifecycle: experimental
   owner: the-pet-team
   system: micropets
+---
+apiVersion: backstage.io/v1alpha1
+kind: Resource
+metadata:
+  name: elephants-db
+  description: Stores Elephants 
+  annotations:
+    'backstage.io/techdocs-ref': dir:.
+spec:
+  type: database
+  owner: the-pet-team
+  system: micropets
